# correctexam-typst-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
annotate-typst/: Cargo.toml  README.md
annotate-typst/.cargo/: config.toml
annotate-typst/src/: lib.rs  main.rs
annotate-web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
correctexam-typst-template/: LICENSE  README.md  typst.toml
correctexam-typst-template/examples/: exam-anonymous.typ  exam-en.typ  exam-fr.typ
correctexam-typst-template/lib/: attach.typ  header.typ  i18n.typ  lib.typ  markers.typ  qcm.typ  questions.typ  template.typ  utils.typ
correctexam-typst-template/quickstart/: exam-en.typ  exam-fr.typ
correctexam-typst-template/tests/: test-all-features.typ  test-custom-boxes.typ  test-en-noid.typ  test-en-withid.typ  test-fr-anonymous.typ  test-fr-withid.typ  test-multipage.typ  validate.sh
